--- a/.github/workflows/cd-backend.yml
+++ b/.github/workflows/cd-backend.yml
@@ -21,7 +21,7 @@ env:
 jobs:
   build-push-deploy:
     name: Build, Push Docker Image and Deploy Backend
-    runs-on: ubuntu-latest # Use a standard GitHub-hosted runner
+    runs-on: self-hosted # Use a standard GitHub-hosted runner
 
     permissions:
       contents: read      # Allow checkout code
