feat(auth): resend email verification

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5434/testingpilotdb # <-- Port updated to 5433
       SPRING_DATASOURCE_USERNAME: testingpilotuser
       SPRING_DATASOURCE_PASSWORD: testingpilotpwd  # <-- Use secrets!
+      SPRING_MAIL_SUPPORT_EMAIL: yumateb@gmail.com
 
       # Optional: Add profile if needed
       # SPRING_PROFILES_ACTIVE: dev
