--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,16 @@ spring.devtools.livereload.enabled=true
 spring.mail.host=${SPRING_MAIL_HOST}
 spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.support_email=${SPRING_MAIL_SUPPORT_EMAIL}
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=${SPRING_MAIL_HOST}
+
+# spring health checking
+management.endpoints.web.exposure.include=health,info,metrics
+
+# otp
+otp.expiration= 5
