--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,6 @@ management.endpoints.web.exposure.include=health,info,metrics
 
 # otp
 otp.expiration= 5
+
+# google
+google.client-id=${GOOGLE_CLIENT_ID}
