feat(auth): add github oauth authentication

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,10 @@ services:
       SPRING_DATASOURCE_PASSWORD: testingpilotpwd  # <-- Use secrets!
       SPRING_MAIL_SUPPORT_EMAIL: yumateb@gmail.com
       GOOGLE_CLIENT_ID: 140196654685-tnjva118amqpnth7q1spj9fjtt2ugfd7.apps.googleusercontent.com
+      GITHUB_API: https://github.com
+      GITHUB_USER_API: https://api.github.com/user
+      GITHUB_CLIENT_ID: Ov23lifJjaWmfYe67xnt
+      GITHUB_CLIENT_SECRET: b5146e03673a7a6b4ba15ea7df8c0a7b388828e6
 
       # Optional: Add profile if needed
       # SPRING_PROFILES_ACTIVE: dev
