--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,42 @@
+#####################################
+# ? Application
+#####################################
 spring.application.name=testing_pilot_backend
 
-#database
+#####################################
+# ?? Database Configuration
+#####################################
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-# environment
-app.dev.frontend.url=${FRONT_END_URL}}
+#####################################
+# ? Environment
+#####################################
+app.dev.frontend.url=${FRONT_END_URL}
 
-
-
-spring.security.user.password=Test12345_
+#####################################
+# ? Spring Security Default User
+#####################################
 spring.security.user.name=user
+spring.security.user.password=Test12345_
 
+#####################################
+# ? DevTools (Hot Reload)
+#####################################
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 
-# email properties
+#####################################
+# ? Email Configuration
+#####################################
 spring.mail.host=${SPRING_MAIL_HOST}
 spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.support_email=${SPRING_MAIL_SUPPORT_EMAIL}
+
+# Additional mail properties
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.port=587
 spring.mail.properties.mail.smtp.auth=true
@@ -30,11 +44,25 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=${SPRING_MAIL_HOST}
 
-# spring health checking
+#####################################
+# ? Spring Actuator Health Check
+#####################################
 management.endpoints.web.exposure.include=health,info,metrics
 
-# otp
-otp.expiration= 5
+#####################################
+# ? OTP Configuration
+#####################################
+otp.expiration=5  # in minutes
 
-# google
+#####################################
+# ? Google OAuth
+#####################################
 google.client-id=${GOOGLE_CLIENT_ID}
+
+#####################################
+# ? GitHub OAuth
+#####################################
+github.api=${GITHUB_API}
+github.client-id=${GITHUB_CLIENT_ID}
+github.client-secret=${GITHUB_CLIENT_SECRET}
+github.user-api=${GITHUB_USER_API}
